# geneweb-py

./: .dockerignore  .gitignore  BILAN_FINAL_COMPLET.md  BILAN_FINAL_SESSIONS.md  CHANGELOG.md  CLAUDE.md  COVERAGE_IMPROVEMENTS.md  COVERAGE_REPORT.md  DEVELOPMENT.md  DOCUMENTATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INDEX_DOCUMENTATION_PYPI.md  LICENSE  MANIFEST.in  NEXT_SESSION_90.md  OPTIMIZATIONS_SUMMARY.md  PARSER_IMPROVEMENTS.md  PHASE1_FINAL_SUMMARY.md  PHASE1_REPORT.md  PROGRESS_LOG.md  PROGRESS_SUMMARY.md  PYPI_READINESS_SUMMARY.md  PYPI_SETUP_COMPLETE.md  QUICK_START_PYPI.md  README.md  RESUME_INTERVENTION.md  ROADMAP_90_PERCENT.md  SESSION2_PLAN.md  SESSION2_PROGRESS.md  SESSION_COMPLETE_SUMMARY.md  SESSION_FINAL_SUMMARY.md  SESSION_PROGRESS.md  SPRINT_FINAL_90.md  STATUS.md  TESTING_ROADMAP.md  TRAVAUX_REALISES.md  docker-compose.yml  fix_b904_simple.py  pyproject.toml  (+1 more)
.github/: CI_CD_SETUP.md  DEPENDABOT_GUIDE.md  FUNDING.yml  dependabot.yml
.github/workflows/: README.md  coverage-report.yml  lint.yml  performance.yml  pr-checks.yml  release.yml  security.yml  test-pypi.yml  tests.yml  weekly-report.yml
doc/: MIGRATION_STRUCTURE_SRC.md  PERFORMANCE.md  PYPI_PUBLICATION_GUIDE.md  PYPI_TESTING_STRATEGY.md  roadmap.md  status.md
doc/geneweb/: gw_format_documentation.md
docs/security/: audit-2026-05-04.md
docs/superpowers/plans/: 2026-05-18-ephemeral-session.md  2026-05-18-geneweb-py-toldot-fr.md
docs/superpowers/specs/: 2026-05-18-ephemeral-session-design.md  2026-05-18-geneweb-py-toldot-fr-design.md
examples/: api_usage.py  basic_usage.py  conversion_usage.py  parser_improvements_demo.py  parser_usage.py  performance_demo.py
geneweb_py/: __init__.py
geneweb_py/api/: dependencies.py  main.py
geneweb_py/api/middleware/: error_handler.py  logging.py
geneweb_py/api/models/: __init__.py  event.py  family.py  person.py  responses.py
geneweb_py/api/routers/: __init__.py  events.py  families.py  genealogy.py  persons.py
geneweb_py/api/services/: genealogy_service.py
geneweb_py/core/: date.py  event.py  exceptions.py  family.py  genealogy.py  models.py  person.py  validation.py
geneweb_py/core/parser/: __init__.py  gw_parser.py  lexical.py  streaming.py  syntax.py
geneweb_py/formats/: __init__.py  base.py  gedcom.py  json.py  xml.py
scripts/: check_pypi_readiness.py  run_tests.sh  validate_pypi.sh
scripts/ci/: pr_coverage_comment.py
src/geneweb_py/: __init__.py
src/geneweb_py/api/: __init__.py  dependencies.py  family_payload.py  limits.py  main.py  person_payload.py  rate_limit.py  router_helpers.py  serialization.py  session_store.py
src/geneweb_py/api/middleware/: __init__.py  error_handler.py  logging.py
src/geneweb_py/api/models/: event.py  family.py  person.py  responses.py
src/geneweb_py/api/routers/: __init__.py  events.py  families.py  genealogy.py  persons.py  sessions.py
src/geneweb_py/api/services/: __init__.py  genealogy_service.py
src/geneweb_py/cli/: __init__.py  commands.py  entry.py
src/geneweb_py/core/: __init__.py  date.py  event.py  exceptions.py  family.py  genealogy.py  models.py  person.py  validation.py
src/geneweb_py/formats/: __init__.py  base.py  gedcom.py  json.py  xml.py
tests/: README.md  SKIPPED_TESTS.md  __init__.py  conftest.py  test_basic.py
tests/api/: __init__.py  test_api_complete_responses_integration.py  test_api_integration.py  test_api_main.py  test_cors_config.py  test_coverage_final.py  test_coverage_simple.py  test_events_router.py  test_events_router_basic.py  test_events_router_minimal.py  test_events_router_simple.py  test_families_router.py  test_families_router_basic.py  test_families_router_simple.py  test_genealogy_router.py  test_genealogy_router_advanced.py  test_genealogy_router_complete.py  test_genealogy_router_final.py  test_genealogy_router_minimal.py  test_genealogy_router_simple.py  test_genealogy_service.py  test_main.py  test_middleware.py  test_models.py  test_persons_router.py  test_persons_router_basic.py  test_persons_router_minimal.py  test_persons_router_simple.py  test_routers_events.py  test_routers_families.py  test_routers_genealogy.py  test_routers_genealogy_complete.py  test_routers_persons.py  test_serialization_helpers_coverage.py  test_service.py  test_service_simple.py  test_services.py  test_session_integration.py  test_session_store.py  test_sessions_router.py  (+1 more)
tests/compatibility/: __init__.py  test_python_versions.py
tests/fixtures/: complex_family.gwplus  error_incomplete.gw  error_inconsistent.gw  error_syntax.gw  malformed_fragment.gw  minimal_iso8859.gw  simple_family.gw  simple_test.gw  test_complete.gw  test_relations.gw  test_witnesses.gw
tests/formats/: test_base_converter.py  test_converters_simple.py  test_formats_xml.py  test_gedcom_converter.py  test_json_converter.py  test_xml_converter.py
tests/integration/: test_complete_person_parsing.py  test_gw_parser.py
tests/packaging/: __init__.py  test_metadata.py  test_public_api.py
tests/performance/: __init__.py  benchmark_parser.py  test_multipass_vs_streaming.py
tests/security/: __init__.py  test_dependencies.py
tests/unit/: test_cli.py  test_date.py  test_date_complete.py  test_date_coverage.py  test_dates_vides.py  test_error_recovery.py  test_evenements_familiaux.py  test_event.py  test_event_complete.py  test_event_coverage.py  test_exceptions.py  test_exceptions_complete.py  test_exceptions_coverage.py  test_family.py  test_family_complete.py  test_family_coverage.py  test_formats_base.py  test_formats_gedcom.py  test_formats_json.py  test_formats_xml.py  test_genealogy.py  test_genealogy_complete.py  test_genealogy_service_coverage.py  test_gw_parser_comprehensive.py  test_gw_parser_coverage.py  test_gw_parser_simple.py  test_lexical_complete.py  test_lexical_parser.py  test_limits_cors.py  test_multipass_parser.py  test_parser_advanced.py  test_parser_edge_cases.py  test_parser_final.py  test_parser_improvements.py  test_parser_integration.py  test_person.py  test_person_complete.py  test_person_coverage.py  test_pr_coverage_comment.py  test_sources.py  (+9 more)
(+9 files in other folders)
